# redis-mcp-python

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml  requirements.txt
src/redis_mcp/: __init__.py  server.py
src/redis_mcp/config/: __init__.py  settings.py
src/redis_mcp/connection/: __init__.py  cluster.py  manager.py
src/redis_mcp/tools/: __init__.py  analyzer.py  database.py  executor.py
src/redis_mcp/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_connection.py
tests/unit/: __init__.py  test_settings.py
